Global dark mode fixed
Dark mode fixed in global html; Based on preferred light theme

--- a/ImRoss.com/Home/style.css
+++ b/ImRoss.com/Home/style.css
@@ -1,197 +1,50 @@
-
- @keyframes openMenu {
-        0% {
-            width: 0px;
-        }
-
-        100% {
-            width: 200px;
-        }
+@media (prefers-color-scheme: dark) {
+    #computer-section {
+        background-color: #292b2c;
     }
 
-button:hover {
-    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
-    transform: translate3d(0, 0, 0);
-    perspective: 1000px;
-}
-
-@keyframes shake {
-    10%, 90% {
-        transform: translate3d(-1px, 0, 0);
-    }
-
-    20%, 80% {
-        transform: translate3d(2px, 0, 0);
-    }
-
-    30%, 50%, 70% {
-        transform: translate3d(-2px, 0, 0);
-    }
-
-    40%, 60% {
-        transform: translate3d(2px, 0, 0);
+    #prof-table {
+        color: white;
     }
 }
 
-    .navbar {
-
-
-    }
-
-    .navbar:hover {
-    }
-
-    .navbar:hover + .computer {
-        filter: blur(3px);
-    }
-
-    .navbar:hover + .computer + main {
-        filter: blur(3px);
-    }
-
-
-    #greeting {
-        width: 40ch;
-        white-space: nowrap;
-        overflow: hidden;
-        border-right: .05em solid;
-        animation: typing 2s steps(15), caret 1s steps(1) infinite;
-    }
+#greeting {
+    width: 28ch;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: .05em solid;
+    animation: typing 2s steps(15), caret 1s steps(1) infinite;
+}
 
     #greeting:hover {
         background-color: #eee;
     }
+ 
 
     @keyframes typing {
         from {
-        width: 0%;
+            width: 0%;
+        }
+
+        to {
+            width: 50%;
+        }
+
+        
     }
-    to{
-        width:50%;
-    }
-}
 
-@keyframes caret {
-    50% {
-        border-right-color: transparent;
-    }
-}
-
-.main:hover{
-
-    filter: blur(5px);
-    background-color:blue;
-}
-
-
-main {
-    transition: .6s filter;
-
-}
-
-main.shiftContent {
-    animation: shift .25s 1;
-    filter: blur(5px);
-    animation-fill-mode: forwards;
-}
-
-    main.returnCont {
-        animation: shift .25s 1;
-
-        animation-direction: reverse;
+    @keyframes caret {
+        50% {
+            border-right-color: transparent;
+        }
+    
     }
 
 
-@keyframes shift {
-    0% {
-        margin-left: 0px;
-    }
-    100% {
-        margin-left: 200px;
-
-    }
-}
 
 
 
 
 
 
-a:#navbar {
-    color: green;
-}
 
-#monitor_txt {
-    color: green;
-}
-
-
-
-
-a {
-    color: red;
-}
-
-
-.pulsating-circle {
-    position: relative;
-    left: 50%;
-    top: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    width: 100px;
-    height: 100px;
-    margin-top:70px;
-    animation: floatup 2s 1;
-}
-
-
-    .pulsating-circle:after {
-        content: '';
-        position: relative;
-        left: 0;
-        top: 0;
-        display: block;
-        width: 100%;
-        height: 100%;
-        background-color: white;
-        background-image: url("/Users/matthewross/Desktop/IMG_0737.jpg");
-        background-position: center;
-        background-size: cover;
-        border-radius: 15px;
-        box-shadow: 0 0 8px rgba(0,0,0,.3);
-    }
-
-@keyframes floatup {
-    0%{
-        margin-top:100%;
-    }
-
-    100%{
-margin-top:70px;
-    }
-
-}
-
-    @keyframes pulse-ring {
-        0% {
-        transform: scale(.33);
-    }
-
-    80%, 100% {
-        opacity: 0;
-    }
-}
-
-@keyframes pulse-dot {
-    0% {
-        transform: scale(.8);
-    }
-
-    50% {
-        transform: scale(1);
-    }
-
-    100% {
-        transform: scale(.8);
-    }
-}
